syntax = "proto3";

import "Role.proto";
import "Entity.proto";

option java_package = "com.ljh.gamedemo.proto";
option java_outer_classname = "MsgEntityInfoProto";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/MsgEntityInfo.proto

enum RequestType{
    AOI = 0;
}

message RequestEntityInfo{
    string requestId = 1;
    int64 userId = 2;

    RequestType type = 3;
}

message ResponseEntityInfo{
    int32 result = 1;       // 返回结果
    string content = 2;

    repeated Role role = 3;          // 获取角色信息
    repeated Entity entity = 4;      // 获取npc信息
}
